--- a/src/styles/components/field.css
+++ b/src/styles/components/field.css
@@ -30,6 +30,7 @@
   &:hover,
   &:focus {
     color: var(--color-dark-2);
+    border-color: var(--color-dark-2);
   }
 
   &:focus {
@@ -40,9 +41,9 @@
   &[type="search"] {
     &:placeholder-shown {
       padding-right: calc(
-      var(--fieldInputPaddingX) * 2 + var(--fieldSearchInputIconSize);
+      var(--fieldInputPaddingX) * 2 + var(--fieldSearchInputIconSize)
       );
-      background-color: url('../../icons/icon-search_black.svg');
+      background-image: url('../../icons/icon-search_black.svg');
       background-position: calc(100% - var(--fieldInputPaddingX)) 50%;
       background-size: var(--fieldSearchInputIconSize);
       background-repeat: no-repeat;
